packages/build/tests/error/utils/fixtures/fail_plugin/plugin.js
module.exports = {
  name: 'netlify-plugin-one',
  onInit({
    utils: {
      error: { failPlugin },
    },
  }) {
    failPlugin('test')
    console.log('onInit')
  },
  onBuild() {
    console.log('onBuild')
  },
}
